parts adding page created but the functions not working yet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,10 +43,11 @@
 
         <activity
             android:name=".ManualRideAddingActivity">
-
         </activity>
 
-
+        <activity
+            android:name=".PartsAddingActivity">
+        </activity>
     </application>
 
 </manifest>
