--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
         </activity>
 
         <activity
-            android:name=".PartsAddingActivity">
+            android:name=".PartsaddingActivity">
         </activity>
 
     </application>
