--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
             android:name=".PartsaddingActivity">
         </activity>
 
+        <activity
+            android:name=".BikeAddingActivity">
+        </activity>
+
     </application>
 
 </manifest>
