--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BPT"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+
+        <!-- Activities -->
+        <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,37 +22,23 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".RegisterActivity">
-        </activity>
+        <activity android:name=".RegisterActivity"> </activity>
 
-        <activity
-            android:name=".LoginActivity">>
-        </activity>
+        <activity android:name=".LoginActivity"> </activity>
 
-        <activity
-            android:name=".DashboardActivity">>
-        </activity>
+        <activity android:name=".DashboardActivity"> </activity>
 
-        <activity
-            android:name=".AccountActivity">
-        </activity>
+        <activity android:name=".AccountActivity"> </activity>
 
-        <activity
-            android:name=".ManualRideAddingActivity">
-        </activity>
+        <activity android:name=".ManualRideAddingActivity"> </activity>
 
-        <activity
-            android:name=".PartsaddingActivity">
-        </activity>
+        <activity android:name=".PartsaddingActivity"> </activity>
 
-        <activity
-            android:name=".BikeAddingActivity">
-        </activity>
+        <activity android:name=".BikeAddingActivity"> </activity>
 
-        <activity
-            android:name=".BikeDetailsActivity">
-        </activity>
+        <activity android:name=".BikeDetailsActivity"> </activity>
+
+        <activity android:name=".PartDetailsActivity"> </activity>
 
     </application>
 
