--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
 
         <activity android:name=".PartDetailsActivity"> </activity>
 
+        <activity android:name=".ServiceAddingActivity"> </activity>
     </application>
 
 </manifest>
