refactor the ServiceAddingActivity to ServiceIntervalAddingActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
 
         <activity android:name=".PartDetailsActivity"> </activity>
 
-        <activity android:name=".ServiceAddingActivity"> </activity>
+        <activity android:name=".ServiceIntervalAddingActivity"> </activity>
     </application>
 
 </manifest>
