Added activity_serviceadding.xml, ServiceAddingActivity.java files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
         <activity android:name=".PartDetailsActivity"> </activity>
 
         <activity android:name=".ServiceIntervalAddingActivity"> </activity>
+
+        <activity android:name=".ServiceAddingActivity"> </activity>
     </application>
 
 </manifest>
