created empty EditServiceIntervalActivity files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
         <activity android:name=".ServiceIntervalAddingActivity"> </activity>
 
         <activity android:name=".ServiceAddingActivity"> </activity>
+
+        <activity android:name=".EditServiceIntervalActivity"> </activity>
     </application>
 
 </manifest>
